Safari365 Prod/src/objects/WETU_mapping__mdt.object
<CustomObject>
    <description>WETU mapping</description>
    <fields>
        <fullName>Object_name__c</fullName>
        <label>Object name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source_field__c</fullName>
        <label>source field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetu_field__c</fullName>
        <label>wetu field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WETU mapping</label>
    <pluralLabel>WETU mappings</pluralLabel>
</CustomObject>